*Rails 3.0.0 [Edge] (pending)*

* Added all the new HTML5 form types as individual form tag methods (search, url, number, etc) #3646 [Stephen Celis]

* Changed the object used in routing constraints to be an instance of
  ActionDispatch::Request rather than Rack::Request [YK]

* Changed ActionDispatch::Request#method to return a String, to be compatible
  with Rack::Request. Added ActionDispatch::Request#method_symbol to
  return a symbol form of the request method. [YK]

* Changed ActionDispatch::Request#method to return the original
  method and #request_method to return the overridden method in the
  case of methodoverride being used (this means that #method returns
  "HEAD" and #request_method returns "GET" in HEAD requests). This
  is for compatibility with Rack::Request [YK]


*Rails 3.0.0 [beta 2] (April 1st, 2010)*

* #concat is now deprecated in favor of using <%= %> helpers [YK]

* Block helpers now return Strings, so you can use <%= form_for @foo do |f| %>.
  <% form_for do |f| %> still works with deprecation notices [YK]

* Add a new #mount method on the router that does not anchor the PATH_INFO
  at the end [YK & CL]

* Create a new LookupContext object that is responsible for performantly
  finding a template for a given pattern [JV]

* Removed relative_url_for in favor of respecting SCRIPT_NAME [YK & CL]

* Changed file streaming to use Rack::Sendfile middleware [YK]

* ActionDispatch::Request#content_type returns a String to be compatible with
  Rack::Request. Use #content_mime_type for the Mime::Type instance [YK]

* Updated Prototype to 1.6.1 and Scriptaculous to 1.8.3 [ML] 

* Change the preferred way that URL helpers are included into a class[YK & CL]

    # for all helpers including named routes
    include Rails.application.router.url_helpers

    # for just url_for
    include Rails.application.router.url_for


*Rails 3.0.0 [beta 1] (February 4, 2010)*

* Fixed that PrototypeHelper#update_page should return html_safe [DHH]
